Some z-index issues

--- a/assets/scss/builder/section/_view.scss
+++ b/assets/scss/builder/section/_view.scss
@@ -469,6 +469,8 @@ html:not(.dragging-section) .delete-icon-wrap {
 	background: #f1f1f1;
 	overflow: scroll;
 	overflow-x: hidden;
+	position: relative;
+	z-index: 1;
 
 	&::after {
 		visibility: hidden;
